/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Joshua Ashby
 */
package ucf.assignments;

import java.util.ArrayList;

public class Item {
    //String Description = "";
    //String DueDate = "";
    //boolean completed = false;

    public boolean isCompleted() {
        //return iscompleted;
        return false;
    }

    public void setCompleted(boolean iscompleted) {
        // this.iscompleted equals iscompleted;
    }

    public String getDueDate() {
        //return DueDate;
        return "";
    }

    public void setDueDate(String dueDate) {
        //DueDate = dueDate;
    }

    public String getDescription() {
        //return Description;
        return"";
    }

    public void setDescription(String description) {
        //Description = description;
    }
}
