@startuml
'https://plantuml.com/sequence-diagram

class App{

+main()
+start()
}

class Item{
    - String Description
    - String DueDate
    - boolean completed

    +iscompleted()
    +setcompleted()
    +getDueDate()
    +setDueDate()
    +getDescription()
    +setDescription()

}

class List{

    -String ToDoListTitle
    -ArrayList<Item> items

    +ToDoList()
    +searchDueDate()
    +searchByDescription()
    +getItems()
    +setItems()
    +getTitle()
    +setTitle()
    +AddItem()
    +RemoveItem()
    +DisplayAllItems()
    +DisplayCompleteItems()
    +DisplayIncompleteItems()
    +SaveTODOList()
    +FormatfileString()
    +LoadTODOList()
    +IsDateFormatCorrect()
    +SortToDOListDueDate()

}

class ListManagerController{
    -ArrayList<Item> lists
    - TextArea ItemsTextArea
    - TextField EditDescriptionCurrentItemDueDate
    - TextField EditDescriptionCurrentItemDescription
    - TextField EditDueDateNewDueDate
    - TextField EditDueDateCurrentItemDescription
    - TextField EditDueDateCurrentItemDueDate
    - TextField EditCompletedStatusCurrentItemDescription
    - TextField EditCompletedStatusCurrentItemDueDate
    - TextField EditCompletedStatusNewCompletedStatus
    - TextField EditDescriptionNewDescription
    - TextField AddItemNewItemDescription
    - TextField AddItemNewItemDueDate
    - TextField DeleteItemCurrentItemDesciption
    - TextField DeleteItemCurrentItemDueDate
    - TextField LoadToDoListToDoListTitle
    - TextField NewToDoListTitleTextField

    +ShowAllIncompleteClicked()
    +ShowAllCompleteItemsClicked()
    +SaveToDoListClicked()
    +DeleteItemClicked()
    +EditDescriptionClicked()
    +AddItemClicked()
    +SaveListOFToDoListsClicked()
    +LoadTODOLISTClicked()
    +EditDueDateClicked()
    +EditCompletedStatusClicked()
    +SortALLItemsClicked()
    +ShowAllItemsClicked()
    +LoadListOfTODOLISTsClicked()
    +DeleteThisTODOLISTClicked()
    +AddToDoListClicked()
    +DisplayItems()
    +ListViewListClicked()
    +call()
    +SaveListOfTODOList()
    +FormatfileStringManager()
    +LoadListofTODOLists()
    +RemoveToDoList()
    +AddToDoList()

}

List -- Item
ListManagerController-- List
App -- ListManagerController
@enduml